[gd_scene load_steps=53 format=2]

[ext_resource path="res://StateMachine Abstracts + Interfaces/PlayerStateMachine.tscn" type="PackedScene" id=1]
[ext_resource path="res://CollisionBoxes/SoftCollisionBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface + Abstract Nodes/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://CollisionBoxes/InteractableDetectionArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://CollisionBoxes/ItemPickupDetector.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Solaria Demo Pack Update 01/48x48/Sprites/Hero 01 48.png" type="Texture" id=7]
[ext_resource path="res://TestResources/State Machine Test Player/StateMchnTestPlayer.gd" type="Script" id=8]
[ext_resource path="res://CollisionBoxes/HurtBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Sound/SoundFX/Footsteps/Footstep_Dirt_01.wav" type="AudioStream" id=10]
[ext_resource path="res://Creatures/Player/PlayerCamera.gd" type="Script" id=11]
[ext_resource path="res://CollisionBoxes/TilemapDetectionArea.tscn" type="PackedScene" id=12]

[sub_resource type="CapsuleShape2D" id=36]
radius = 5.00001
height = 18.0

[sub_resource type="CapsuleShape2D" id=66]
radius = 14.0
height = 10.0

[sub_resource type="Animation" id=37]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=67]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 90.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=38]
resource_name = "idle_down"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show"
} ]
}

[sub_resource type="Animation" id=39]
resource_name = "idle_left"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=40]
resource_name = "idle_right"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=41]
resource_name = "idle_up"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=42]
resource_name = "walk_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=43]
resource_name = "walk_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=44]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=45]
resource_name = "walk_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59 ]
}

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "attack_left"

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "attack_down"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "attack_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
blend_point_0/node = SubResource( 63 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 64 )
blend_point_1/pos = Vector2( 1.1, 0 )
blend_point_2/node = SubResource( 65 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 49 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 50 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 51 )
blend_point_1/pos = Vector2( 1.1, 0 )
blend_point_2/node = SubResource( 52 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 53 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "walk_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 54 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 55 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 56 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 57 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "die"

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachineTransition" id=70]

[sub_resource type="AnimationNodeStateMachine" id=58]
states/Attack/node = SubResource( 33 )
states/Attack/position = Vector2( 290.062, 51.0675 )
states/Idle/node = SubResource( 16 )
states/Idle/position = Vector2( 290, 139.5 )
states/Move/node = SubResource( 23 )
states/Move/position = Vector2( 483.5, 141 )
states/die/node = SubResource( 68 )
states/die/position = Vector2( 105.955, 139.534 )
transitions = [ "Idle", "Move", SubResource( 24 ), "Move", "Idle", SubResource( 25 ), "Attack", "Idle", SubResource( 34 ), "Idle", "Attack", SubResource( 35 ), "Idle", "die", SubResource( 69 ), "die", "Idle", SubResource( 70 ) ]
start_node = "Idle"
graph_offset = Vector2( -183.045, 3.06751 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=59]

[sub_resource type="CapsuleShape2D" id=71]
radius = 12.0
height = 12.0

[sub_resource type="CircleShape2D" id=72]

[sub_resource type="CapsuleShape2D" id=73]
radius = 12.0
height = 4.0

[sub_resource type="CircleShape2D" id=74]
radius = 2.0

[node name="SingletonPlayer" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -15 )
texture = ExtResource( 7 )
hframes = 8
vframes = 16
frame = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = -1.5708
shape = SubResource( 36 )

[node name="HurtBox" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -10 )
collision_layer = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 66 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
MAX_SPEED = 250
acceleration = 1500
friction = 1250
MAX_HEALTH = 10

[node name="StateMachine" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 37 )
anims/die = SubResource( 67 )
anims/idle_down = SubResource( 38 )
anims/idle_left = SubResource( 39 )
anims/idle_right = SubResource( 40 )
anims/idle_up = SubResource( 41 )
anims/walk_down = SubResource( 42 )
anims/walk_left = SubResource( 43 )
anims/walk_right = SubResource( 44 )
anims/walk_up = SubResource( 45 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 58 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 59 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Move/blend_position = Vector2( 0, 0 )

[node name="RangedWeaponSpawnPosition" type="Position2D" parent="."]
position = Vector2( 0, 32 )

[node name="SoftCollisionBox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -10 )

[node name="CollisionShape2D" parent="SoftCollisionBox" index="0"]
shape = SubResource( 71 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
script = ExtResource( 11 )

[node name="SpriteCenterPosition2D" type="Position2D" parent="."]
position = Vector2( 0, -8 )

[node name="InteractableDetectionArea" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 19 )

[node name="CollisionShape2D" parent="InteractableDetectionArea" index="0"]
shape = SubResource( 72 )

[node name="ItemPickupDetector" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -5 )

[node name="CollisionShape2D" parent="ItemPickupDetector" index="0"]
shape = SubResource( 73 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="WalkingAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0
pitch_scale = 0.8

[node name="TilemapDetectionBox" parent="." instance=ExtResource( 12 )]

[node name="CollisionShape2D" parent="TilemapDetectionBox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 74 )

[editable path="HurtBox"]
[editable path="SoftCollisionBox"]
[editable path="InteractableDetectionArea"]
[editable path="ItemPickupDetector"]
[editable path="TilemapDetectionBox"]
